<resources>
    <string name="show_pub" translatable="false">0</string>
    <string name="ad_id_interstitial_in_use" translatable="false">@string/ad_id_interstitial_test</string>
    <string name="ad_id_banner_in_use" translatable="false">@string/ad_id_banner_test</string>
    <string name="bbm_sys_pref" translatable="false">BBMsysPref</string>
    <string name="bbm_sys_auth_need" translatable="false">swt_protect_data</string>
    <string name="bd_version" translatable="false">0</string>
    <string name="pub_percent" translatable="false">15</string>
    <string name="pub_percent_correction" translatable="false">7.0</string>
    <string name="ad_id_banner_test" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="ad_id_banner" translatable="false">ca-app-pub-1246499090499999/9010131463</string>
    <string name="ad_id_interstitial_test" translatable="false">ca-app-pub-3940256099942544/1033173712</string>
    <string name="ad_id_interstitial" translatable="false">ca-app-pub-1246499090499999/1068062268</string>
    <string name="app_name">Bill Budget Manager</string>
    <string name="app_name_short" translatable="false">BBM </string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="no_data_yet">No Data found for the Table</string>
    <string name="bbm_stat_nom_label">Event name</string>
    <string name="bbm_stat_montant_label">Event Amount</string>
    <string name="bbm_stat_descrip_label">Event description</string>
    <string name="bbm_stat_start_date_label">Start date</string>
    <string name="bbm_stat_end_date_label">End date</string>
    <string name="bbm_stat_start_time_label">Start time</string>
    <string name="bbm_stat_edit_date_label">Select the date</string>
    <string name="date_pattern">MMM-dd-yyyy</string>
    <string name="date_pattern_short">MM-dd-yyyy</string>
    <string name="hour_pattern">h:mm a</string>
    <string name="repeat_frequency">Frequency</string>
    <string name="repeat_monday">Mo</string>
    <string name="repeat_tuesday">Tu</string>
    <string name="repeat_wednesday">We</string>
    <string name="repeat_thursday">Th</string>
    <string name="repeat_friday">Fr</string>
    <string name="repeat_saturday">Sa</string>
    <string name="repeat_sunday">Su</string>
    <string name="repeat_day">Select days of week</string>
    <string name="repeat_unlimited">Forever</string>
    <string name="repeat_number">number</string>
    <string name="repeat_Month_by">Select day in month</string>
    <string name="repeat_day_month">Day of month. ex. 22nd</string>
    <string name="repeat_day_week_month">Day of week. ex. 2nd Friday</string>
    <string name="type_end_occu" translatable="false">occu</string>
    <string name="title_activity_accueil">AccueilActivity</string>
    <string name="title_section1">Income</string>
    <string name="title_section2">Expence</string>
    <string name="title_section3">Unpaid list</string>
    <string name="title_section4">Upcoming</string>
    <string name="title_first_open">Upcoming</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sens_credit" translatable="false">credit</string>
    <string name="sens_debit" translatable="false">debit</string>
    <string name="sens_credit_affiche">Incomes</string>
    <string name="sens_debit_affiche">Expenses</string>
    <string name="income_affiche">Incomes : </string>
    <string name="income_affiche_simple">Incomes </string>
    <string name="expense_affiche">Expenses : </string>
    <string name="expense_affiche_simple">Expenses </string>
    <string name="balance_affiche">Balance : </string>
    <string name="balance_affiche_simple">Balance </string>
    <string name="more">MORE...</string>
    <string name="current_state_running" translatable="false">running</string>
    <string name="current_state_done" translatable="false">done</string>
    <string name="current_state_canceled" translatable="false">canceled</string>
    <string name="current_state_missed" translatable="false">missed</string>
    <string name="current_state_deleted" translatable="false">deleted</string>
    <string name="cat_cmdSave">Save</string>
    <string name="add_new">[ADD NEW]</string>
    <string name="add_new_val">addnew</string>
    <string name="add_divers_affiche">OTHERS</string>
    <string name="add_divers">divers</string>
    <string name="add_cat_home" translatable="false">sys_cat_house</string>
    <string name="add_cat_transportation" translatable="false">sys_cat_transportation</string>
    <string name="add_cat_food" translatable="false">sys_cat_food</string>
    <string name="add_cat_health" translatable="false">sys_cat_health</string>
    <string name="add_cat_fun" translatable="false">sys_cat_fun</string>
    <string name="add_cat_utilities" translatable="false">sys_cat_utilities</string>
    <string name="add_cat_debt" translatable="false">sys_cat_debt</string>
    <string name="add_cat_income" translatable="false">sys_cat_income</string>
    <string name="add_cat_home_affiche">Housing</string>
    <string name="add_cat_transportation_affiche">Transportation</string>
    <string name="add_cat_food_affiche">Food</string>
    <string name="add_cat_health_affiche">Health</string>
    <string name="add_cat_fun_affiche">Entertainment</string>
    <string name="add_cat_utilities_affiche">Utilities</string>
    <string name="add_cat_debt_affiche">Debt</string>
    <string name="add_cat_income_affiche">Income</string>
    <string name="add_event_income_salary" translatable="false">sys_event_income_salary</string>
    <string name="add_event_income_other" translatable="false">sys_event_income_other</string>
    <string name="add_event_transp_auto_loan" translatable="false">sys_event_transp_auto_loan</string>
    <string name="add_event_transp_insurance" translatable="false">sys_event_transp_insurance</string>
    <string name="add_event_transp_gas" translatable="false">sys_event_transp_gas</string>
    <string name="add_event_transp_maintenance" translatable="false">sys_event_transp_maintenance</string>
    <string name="add_event_transp_registration" translatable="false">sys_event_transp_registration</string>
    <string name="add_event_transp_other" translatable="false">sys_event_transp_other</string>
    <string name="add_event_home_mortgage" translatable="false">sys_event_home_mortgage</string>
    <string name="add_event_home_rent" translatable="false">sys_event_home_rent</string>
    <string name="add_event_home_furniture" translatable="false">sys_event_home_furniture</string>
    <string name="add_event_home_supplies" translatable="false">sys_event_home_supplies</string>
    <string name="add_event_home_maintenance" translatable="false">sys_event_home_maintenance</string>
    <string name="add_event_home_registration" translatable="false">sys_event_home_registration</string>
    <string name="add_event_home_insurance" translatable="false">sys_event_home_insurance</string>
    <string name="add_event_home_real_estate_tax" translatable="false">sys_event_home_real_estate_tax</string>
    <string name="add_event_home_other" translatable="false">sys_event_home_other</string>
    <string name="add_event_utils_home_phone" translatable="false">sys_event_utils_home_phone</string>
    <string name="add_event_utils_cell_phone" translatable="false">sys_event_utils_cell_phone</string>
    <string name="add_event_utils_cable" translatable="false">sys_event_utils_cable</string>
    <string name="add_event_utils_water" translatable="false">sys_event_utils_water</string>
    <string name="add_event_utils_electricity" translatable="false">sys_event_utils_electricity</string>
    <string name="add_event_utils_internet" translatable="false">sys_event_utils_internet</string>
    <string name="add_event_utils_other" translatable="false">sys_event_utils_other</string>
    <string name="add_event_fun_movies" translatable="false">sys_event_fun_movies</string>
    <string name="add_event_fun_music" translatable="false">sys_event_fun_music</string>
    <string name="add_event_fun_events" translatable="false">sys_event_fun_events</string>
    <string name="add_event_fun_vacation" translatable="false">sys_event_fun_vacation</string>
    <string name="add_event_fun_membership" translatable="false">sys_event_fun_membership</string>
    <string name="add_event_fun_other" translatable="false">sys_event_fun_other</string>
    <string name="add_event_health_dental" translatable="false">sys_event_health_dental</string>
    <string name="add_event_health_medical" translatable="false">sys_event_health_medical</string>
    <string name="add_event_health_medication" translatable="false">sys_event_health_medication</string>
    <string name="add_event_health_vision" translatable="false">sys_event_health_vision</string>
    <string name="add_event_health_emergency_kit" translatable="false">sys_event_health_emergency_kit</string>
    <string name="add_event_health_other" translatable="false">sys_event_health_other</string>
    <string name="add_event_food_groceries" translatable="false">sys_event_food_groceries</string>
    <string name="add_event_food_dining_out" translatable="false">sys_event_food_dining_out</string>
    <string name="add_event_food_fast_food" translatable="false">sys_event_food_fast_food</string>
    <string name="add_event_food_lunch_at_work" translatable="false">sys_event_food_lunch_at_work</string>
    <string name="add_event_food_other" translatable="false">sys_event_food_other</string>
    <string name="add_event_income_salary_affiche">Salary</string>
    <string name="add_event_income_other_affiche">Other</string>
    <string name="add_event_transp_auto_loan_affiche">Auto loan</string>
    <string name="add_event_transp_insurance_affiche">Insurance</string>
    <string name="add_event_transp_gas_affiche">Gas</string>
    <string name="add_event_transp_maintenance_affiche">Maintenance</string>
    <string name="add_event_transp_registration_affiche">Registration</string>
    <string name="add_event_transp_other_affiche">Other</string>
    <string name="add_event_home_mortgage_affiche">Mortgage</string>
    <string name="add_event_home_rent_affiche">Rent</string>
    <string name="add_event_home_furniture_affiche">Furniture</string>
    <string name="add_event_home_supplies_affiche">Supplies</string>
    <string name="add_event_home_maintenance_affiche">Maintenance</string>
    <string name="add_event_home_registration_affiche">Registration</string>
    <string name="add_event_home_insurance_affiche">Home insurance</string>
    <string name="add_event_home_real_estate_tax_affiche">Real Estate Tax</string>
    <string name="add_event_home_other_affiche">Other</string>
    <string name="add_event_utils_home_phone_affiche">Home phone</string>
    <string name="add_event_utils_cell_phone_affiche">Cell phone</string>
    <string name="add_event_utils_cable_affiche">Cable</string>
    <string name="add_event_utils_water_affiche">Water</string>
    <string name="add_event_utils_electricity_affiche">Electricity</string>
    <string name="add_event_utils_internet_affiche">Internet</string>
    <string name="add_event_utils_other_affiche">Other</string>
    <string name="add_event_fun_movies_affiche">Movies</string>
    <string name="add_event_fun_music_affiche">Music</string>
    <string name="add_event_fun_events_affiche">Events</string>
    <string name="add_event_fun_vacation_affiche">Vacation</string>
    <string name="add_event_fun_membership_affiche">Membership</string>
    <string name="is_auto_pay">Is automatic pay</string>
    <string name="repeat_option">Repeat Option</string>
    <string name="event_name">Event Name</string>
    <string name="event_amout">Event Amount</string>
</resources>