<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.gmb.bbm2.AddBBMActivity"
    >

    <com.gmb.bbm2.tools.customviews.MySpinnerAsTextInputLayout
        android:id="@+id/spinCategory"
        android:layout_width="359dp"
        android:layout_height="70dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:spinHint="Select Category">


    </com.gmb.bbm2.tools.customviews.MySpinnerAsTextInputLayout>





    <android.support.design.widget.TextInputLayout
        android:id="@+id/lytNom"
        android:layout_width="359dp"
        android:layout_height="53dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinCategory">

        <TextView
            android:id="@+id/txtNomSystem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"/>

        <android.support.design.widget.TextInputEditText
            android:id="@+id/txtNomEvent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/event_name" />
    </android.support.design.widget.TextInputLayout>





    <android.support.design.widget.TextInputLayout
        android:id="@+id/lytMontant"
        android:layout_width="355dp"
        android:layout_height="50dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lytNom">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/txtMontantEvent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/event_amout" />
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/lytDate"
        android:layout_width="359dp"
        android:layout_height="53dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lytMontant">

        <TextView
            android:id="@+id/txtDateStartVal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"/>

        <android.support.design.widget.TextInputEditText
            android:id="@+id/txtDateStart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/bbm_stat_start_date_label" />
    </android.support.design.widget.TextInputLayout>

    <RelativeLayout
        android:id="@+id/lytFreq"
        android:layout_width="356dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lytDate"
        android:padding="0dp">

        <com.gmb.bbm2.tools.customviews.MySpinnerAsTextInputLayout
            android:id="@+id/spinRepeatUnit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:padding="0dp"
            android:layout_toLeftOf="@+id/img_repeatOption"

            custom:spinHint="@string/repeat_frequency"
            android:entries="@array/repeat_units2"
            >


        </com.gmb.bbm2.tools.customviews.MySpinnerAsTextInputLayout>


        <ImageView
            android:id="@+id/img_repeatOption"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"

            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignBaseline="@+id/spinRepeatUnit"
            android:src="@drawable/ic_repeat_black_24dp"
            android:contentDescription="@string/repeat_option"/>


        <TextView
            android:id="@+id/txtRepeatInfo"
            android:layout_width="355dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:text="Repeat every 1 month until December 2019 or some number of days to be set"
            android:inputType="textMultiLine"
            android:visibility="gone"
            android:layout_below="@+id/spinRepeatUnit" />

    </RelativeLayout>



    <Switch
        android:id="@+id/swtAutoPay"
        android:layout_width="352dp"
        android:layout_height="50dp"
        android:layout_marginBottom="268dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/is_auto_pay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lytFreq" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout3"
        android:layout_width="356dp"
        android:layout_height="50dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="44dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/swtAutoPay">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/txtNote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Event Note" />
    </android.support.design.widget.TextInputLayout>



</android.support.constraint.ConstraintLayout>
